@@ -581,20 +581,48 @@ class ChooserBlock(FieldBlock):
 
 class PageChooserBlock(ChooserBlock):
 
-    def __init__(self, target_model='wagtailcore.Page', can_choose_root=False,
+    # TODO: rename target_model to page_type
+    def __init__(self, target_model=None, can_choose_root=False,
                  **kwargs):
-        self._target_model = target_model
+        if target_model:
+            # Convert single string/model into a list
+            if not isinstance(target_model, (list, tuple)):
+                target_model = [target_model]
+        else:
+            target_model = []
+
+        self._target_models = target_model
         self.can_choose_root = can_choose_root
         super(PageChooserBlock, self).__init__(**kwargs)
 
     @cached_property
     def target_model(self):
-        return resolve_model_string(self._target_model)
+        """
+        Defines the model used by the base ChooserBlock for ID <-> instance
+        conversions. If a single page type is specified in target_model,
+        we can use that to get the more specific instance "for free"; otherwise
+        use the generic Page model.
+        """
+        if len(self.target_models) == 1:
+            return self.target_models[0]
+
+        return resolve_model_string('wagtailcore.Page')
+
+    @cached_property
+    def target_models(self):
+        target_models = []
+
+        for target_model in self._target_models:
+            target_models.append(
+                resolve_model_string(target_model)
+            )
+
+        return target_models
 
     @cached_property
     def widget(self):
         from wagtail.wagtailadmin.widgets import AdminPageChooser
-        return AdminPageChooser(target_models=[self.target_model],
+        return AdminPageChooser(target_models=self.target_models,
                                 can_choose_root=self.can_choose_root)
 
     def render_basic(self, value, context=None):
@@ -605,9 +633,18 @@ class PageChooserBlock(ChooserBlock):
 
     def deconstruct(self):
         name, args, kwargs = super(PageChooserBlock, self).deconstruct()
+
         if 'target_model' in kwargs:
-            opts = self.target_model._meta
-            kwargs['target_model'] = '{}.{}'.format(opts.app_label, opts.object_name)
+            target_models = []
+
+            for target_model in self.target_models:
+                opts = target_model._meta
+                target_models.append(
+                    '{}.{}'.format(opts.app_label, opts.object_name)
+                )
+
+            kwargs['target_model'] = target_models
+
         return name, args, kwargs
 
     class Meta:
